Fix comment x-overflow; Fix reset button; Fix autofilled fields resetting

--- a/beta/static/style.css
+++ b/beta/static/style.css
@@ -129,7 +129,17 @@ html, body, header, #viewDiv {
 
 .list-group {
   max-height: 300px;
-  overflow-y: auto;
+  overflow: auto;
+}
+
+.list-group-item {
+  word-break: break-all;
+}
+
+.timestamp {
+  padding-left: 5px;
+  text-align: right;
+  min-width: 12%;
 }
 
 #required-text {
